# ai-review

./: README.md  build_command.sh  docker-compose.yml
backend/: .gitignore  dockerfile  entrypoint.sh  pyproject.toml
backend/src/: .env  .env.example
backend/src/account/: models.py
backend/src/account/migrations/: 0001_initial.py  0002_alter_user_last_login.py
backend/src/ai_review/: asgi.py  celery_worker.py  celeryconfig.py  settings.py  urls.py  wsgi.py
backend/src/authentication/: urls.py  utils.py  views.py
backend/src/chat/: models.py  routing.py  urls.py  utils.py  views.py
backend/src/max/: api-routing.py  inclusion_criteria.json  llm_paras.json  llm_screen_single_prompt.py
backend/src/review/: models.py  serializers.py  urls.py  utils.py  views.py
backend/src/review/management/commands/: migrate_structure.py
backend/src/review/migrations/: 0001_initial.py  0002_change_aireview_fields.py  0003_review_structure_type.py  0004_review_sorting_config_alter_review_ranking_method_and_more.py
backend/src/review/prompts/: co_ask_ai_prompt.json  co_detail_reason_prompt.json  co_pico_extract_prompt.json  post_prompt.json  pre_prompt.json
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/public/: aireview_demo.ris
frontend/src/: App.vue  main.ts  router.ts
frontend/src/assets/: custom-primevue.css  style.css
frontend/src/components/: AssistantPanel.vue  Button.vue  Container.vue  CustomButton.vue  CustomIconButton.vue  Inputbox.vue  Loading.vue  Modal.vue  (+4 more)
nginx_conf.d/: ai_review. conf
(+64 files in other folders)
